--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
     font-size: 22px;
     text-align: center;
     /* word-wrap: break-word; */
-    /* word-break: break-all; */
+    word-break: break-all;
 }
 .content .author{
     display: flex;
